frontend/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: 381491977261.dkr.ecr.us-east-1.amazonaws.com/eks-express/production/frontend:latest
        ports:
        - containerPort: 80
